Home Page Update
Working towards A04. Updated front page with tables. Added header, nav
bar, summary window, and minimal text on right panel.

Created second page with link. Second page has minimal text and link
back to main page.

Updated settings for IntelliJ

--- a/IC/w1c2/Hello World.html
+++ b/IC/w1c2/Hello World.html
@@ -5,7 +5,38 @@
     <title>IC: W1C2</title>
 </head>
 <body>
-<h1>Hello World!</h1>
-<p>Welcome to my website.</p>
+<table border="1" style="width:100%">
+<tr>
+    <th colspan="2">
+        <center>Hello World!</center>
+    </th>
+</tr>
+<tr>
+    <td colspan="2">
+    <a href="Hello%20World.html">Home</a>
+    <a href="Goodbye%20World.html">Page 2</a>
+    </td>
+</tr>
+    <td style="width:25%">
+        <br>
+        <center>
+            <b>Summary Window</b>
+            <p>
+                HTML supports tables
+            </p>
+            <p>
+                HTML supports three different types of lists: unordered, ordered, and description
+            </p>
+        </center>
+    </td>
+    <td>
+        <br>
+        <h3>Home Page</h3>
+        <p>Tables:</p>
+        
+    </td>
+</tr>
+
+</table>
 </body>
 </html>
