--- a/Assignments/A04/formsGet.html
+++ b/Assignments/A04/formsGet.html
@@ -32,6 +32,7 @@
   <!-- Forms; row 3; column 2; right 75%-->
   <td>
     <h3>Forms Page</h3>
+
     <p>The following is a text input:</p>
 
     <form method="get">
@@ -69,7 +70,11 @@
       <!-- uses GET. No real action -->
       <input type="submit" value="Submit">
     </form>
-   </td>
+  </td>
+  <!-- Footer -->
+  <tr align="center">
+    <td colspan="2">Copyright (C) Rachel Pang</td>
+  </tr>
 
 </table>
 </body>
