--- a/Assignments/A04/tablesLists.html
+++ b/Assignments/A04/tablesLists.html
@@ -97,6 +97,10 @@
       <dd>white cold drink</dd>
     </dl>
   </td>
+  <!-- Footer -->
+  <tr align="center">
+    <td colspan="2">Copyright (C) Rachel Pang</td>
+  </tr>
 
 </table>
 </body>
